# ITKVkFFTBackend

./: .cirun.yml  .gersemi.config  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.rst  itk-module-init.cmake  itk-module.cmake  pyproject.toml  setup.py
.github/workflows/: build-test-package.yml  clang-format-linter.yml  test-gpu.yml  test-notebooks.yml
example/: AcceleratedForwardFFT.ipynb  AcceleratedGaussianBlurring.ipynb  AcceleratedMultiscalePyramidGeneration.ipynb  ConvolutionScaleMetricBenchmarks.ipynb  FFTConvolutionOverRegionOfInterest.ipynb  GaussianBlurBenchmark.ipynb  fft_benchmark.py
include/: itkMinimalStandardRandomVariateGenerator.h  itkVkBlurringPerformanceMetric.h  itkVkCommon.h  itkVkComplexToComplex1DFFTImageFilter.h  itkVkComplexToComplex1DFFTImageFilter.hxx  itkVkComplexToComplexFFTImageFilter.h  itkVkComplexToComplexFFTImageFilter.hxx  itkVkComplexToComplexImageFilter.h  itkVkComplexToComplexImageFilter.hxx  itkVkDefinitions.h  itkVkDiscreteGaussianImageFilter.h  itkVkDiscreteGaussianImageFilter.hxx  itkVkFFTImageFilterInitFactory.h  itkVkForward1DFFTImageFilter.h  itkVkForward1DFFTImageFilter.hxx  itkVkForwardFFTImageFilter.h  itkVkForwardFFTImageFilter.hxx  itkVkGlobalConfiguration.h  itkVkHalfHermitianToRealInverseFFTImageFilter.h  itkVkHalfHermitianToRealInverseFFTImageFilter.hxx  itkVkInverse1DFFTImageFilter.h  itkVkInverse1DFFTImageFilter.hxx  itkVkInverseFFTImageFilter.h  itkVkInverseFFTImageFilter.hxx  itkVkMultiResolutionPyramidImageFilter.h  itkVkMultiResolutionPyramidImageFilter.hxx  itkVkMultiResolutionPyramidImageFilterFactory.h  itkVkRealToHalfHermitianForwardFFTImageFilter.h  itkVkRealToHalfHermitianForwardFFTImageFilter.hxx
src/: CMakeLists.txt  itkVkCommon.cxx  itkVkFFTImageFilterInitFactory.cxx  itkVkGlobalConfiguration.cxx
test/: CMakeLists.txt  itkVkComplexToComplex1DFFTImageFilterBaselineTest.cxx  itkVkComplexToComplex1DFFTImageFilterSizesTest.cxx  itkVkComplexToComplexFFTImageFilterTest.cxx  itkVkComplexToComplexImageFilterTest.cxx  itkVkDiscreteGaussianImageFilterTest.cxx  itkVkFFTImageFilterFactoryTest.cxx  itkVkForward1DFFTImageFilterBaselineTest.cxx  itkVkForwardInverse1DFFTImageFilterTest.cxx  itkVkForwardInverseFFTImageFilterTest.cxx  itkVkGlobalConfigurationTest.cxx  itkVkHalfHermitianFFTImageFilterTest.cxx  itkVkInverse1DFFTImageFilterBaselineTest.cxx  itkVkMultiResolutionPyramidImageFilterFactoryTest.cxx  itkVkMultiResolutionPyramidImageFilterTest.cxx
test/Baseline/: itkVkDiscreteGaussianImageFilterTestOutput.mha.cid  itkVkDiscreteGaussianImageFilterTestOutput.mha.sha512  itkVkMultiResolutionPyramidImageFilterTest0.mha.cid  itkVkMultiResolutionPyramidImageFilterTest0.mha.sha512  itkVkMultiResolutionPyramidImageFilterTest1.mha.cid  itkVkMultiResolutionPyramidImageFilterTest1.mha.sha512  itkVkMultiResolutionPyramidImageFilterTest2.mha.cid  itkVkMultiResolutionPyramidImageFilterTest2.mha.sha512  itkVkMultiResolutionPyramidImageFilterTest3.mha.cid  itkVkMultiResolutionPyramidImageFilterTest3.mha.sha512  itkVkMultiResolutionPyramidImageFilterTest4.mha.cid  itkVkMultiResolutionPyramidImageFilterTest4.mha.sha512
wrapping/: CMakeLists.txt  dockcross-manylinux-build-module-wheels-opencl.sh  dockcross-manylinux-download-cache.sh  itkVkCommon.wrap  itkVkComplexToComplex1DFFTImageFilter.wrap  itkVkComplexToComplexFFTImageFilter.wrap  itkVkComplexToComplexImageFilter.wrap  itkVkDiscreteGaussianImageFilter.wrap  itkVkFFTImageFilterInitFactory.wrap  itkVkForward1DFFTImageFilter.wrap  itkVkForwardFFTImageFilter.wrap  itkVkGlobalConfiguration.wrap  itkVkHalfHermitianToRealInverseFFTImageFilter.wrap  itkVkInverse1DFFTImageFilter.wrap  itkVkInverseFFTImageFilter.wrap  itkVkMultiResolutionPyramidImageFilter.wrap  itkVkMultiResolutionPyramidImageFilterFactory.wrap  itkVkRealToHalfHermitianForwardFFTImageFilter.wrap
wrapping/test/: CMakeLists.txt  itkVkFFTInitFactoryTest.py
